# ai-research-assistant

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: agent.py  config.py  logger.py  main.py  schemas.py
backend/app/services/: openai_client.py
backend/app/tools/: fetch.py  search.py
frontend/: pubspec.yaml
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/models/: research_response.dart
frontend/lib/screens/: research_screen.dart
frontend/lib/services/: api_service.dart
frontend/test/: widget_test.dart
